fix: fix dark mode contrast issue

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,7 @@ body, html {
 body {
     font-family: var(--md-ref-typeface-plain);
     background-color: var(--md-sys-color-background);
+    color: var(--md-sys-color-on-background);
     width: 100dvw;
     height: 100dvh;
 }
